fix 3rd popular card size on firefox

--- a/style/mobile.css
+++ b/style/mobile.css
@@ -274,10 +274,8 @@ input::placeholder {
 .hosts-popular-cards {
   display: flex;
   margin: 0;
-  align-items: center;
   justify-content: center;
   margin-right: 0px;
-  
 }
 
 
